# bff-lambda-benchmark

./: LICENSE  README.md
app/client/src/: main.py
app/go/infra/: main.tf
app/go/src/: app.go  go.mod
app/python/: README.md
app/python/infra/: main.tf
app/python/src/: app.py  requirements.txt
app/rust/: Cargo.toml
app/rust/infra/: main.tf
app/rust/src/: main.rs
