[package]
name = "demo-lambda-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
axum = "0.6"
tower = "0.4"
lambda_http = "0.6"
lambda_runtime = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
base64 = "0.21"
flate2 = "1"
once_cell = "1"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"

[features]
# Ative com `--features lambda` se quiser rodar na AWS
lambda = []
